# ZLCR

./: .gitattributes  .gitmodules  .gn  BUILD.gn  README.md  index.md
.devcontainer/: Dockerfile  devcontainer.json
APP/ZLCR/ZLCR/: App.xaml.cs
APP/ZLCR/ZLCR/Properties/: Settings.Designer.cs
Firmware/: .mxproject  100k_ZLCR_beta.hex  Firmware.ioc  Makefile  rebulid.bat
Firmware/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/: startup_stm32f411xe.s  startup_stm32f446xx.s
Firmware/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/gcc/: startup_stm32f401xc.s  startup_stm32f401xe.s  startup_stm32f407xx.s  startup_stm32f410cx.s  startup_stm32f410rx.s  startup_stm32f410tx.s  startup_stm32f411xe.s  startup_stm32f412cx.s  startup_stm32f412rx.s  startup_stm32f412vx.s  startup_stm32f412zx.s  startup_stm32f415xx.s  startup_stm32f417xx.s  startup_stm32f427xx.s  startup_stm32f437xx.s  startup_stm32f439xx.s  startup_stm32f446xx.s  startup_stm32f469xx.s  startup_stm32f479xx.s
Firmware/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/iar/: startup_stm32f411xe.s  startup_stm32f446xx.s
Firmware/Inc/: BSP.h  FreeRTOSConfig.h  JSON.h  stm32f4xx_it.h
Firmware/MDK-ARM/: Firmware.uvguix.tianlan  Firmware.uvoptx  Firmware.uvprojx  JLinkSettings.ini  startup_stm32f411xe.s
Firmware/MDK-ARM/RTE/: RTE_Components.h
Firmware/Src/: BSP.c  DSP.c  JSON.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Firmware/Visual Studio Project/: Firmware.sln  Firmware.vcxproj  Firmware.vcxproj.filters  readme.txt
Firmware/ZLCR_beta_core/: BSP.c  DSP.c  ZLCR_beta_core.c  ZLCR_beta_core.h
Firmware/ZLCR_beta_freertos/Inc/: ZLCR_beta_bsp.h  main.h
Firmware/ZLCR_beta_freertos/Src/: ZLCR_beta_bsp.c  main.c
Firmware/sw_ZLCR_beta/: 100k_ZLCR_beta.ioc  Makefile
Firmware/sw_ZLCR_beta/GCC/: startup_stm32f411xe.c
Firmware/sw_ZLCR_beta/Src/: BSP.c  DSP.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Firmware/sw_ZLCR_lite/: sw_ZLCR_lite.ioc
Firmware/sw_ZLCR_lite/Inc/: BSP.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Firmware/sw_ZLCR_lite/Src/: BSP.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Software/ZLCR/: ZLCR.sln
Software/ZLCR/ZLCR/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ZLCR.csproj  packages.config
Software/ZLCR/ZLCR/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Software/pyLCR/: analyzer.py  app.py  scan.py  zlcr_meas.py  zlcr_meas.ui
ZLCR/: ZLCR.sln
ZLCR/ZLCR/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  ZLCR.csproj  packages.config
ZLCR/ZLCR/Properties/: AssemblyInfo.cs  Resources.Designer.cs
docs/: 20M_ZLCR_LPC4370.md  how_to_work.md
firmware/: BUILD.gn  Makefile
firmware/bsp/: BUILD.gn
firmware/bsp/inc/: zlcr_beta_bsp.h
firmware/core/: BUILD.gn  zlcr_beta_core.c  zlcr_beta_core.h
firmware/core/inc/: zlcr_core.h
firmware/core/src/: zlcr_core.c  zlcr_core_dds.c
firmware/lib/: BUILD.gn
firmware/port/inc/: mpconfigport.h
firmware/project/cubemx/: zlcr_beta_rtos.ioc
firmware/revc/: BUILD.gn
firmware/revc/inc/: main.h  stm32f4xx_hal_conf.h
firmware/revc/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  zlcr_beta_bsp.c  zlcr_core.c  zlcr_core_mixer.c
firmware/rtos/: BUILD.gn  rtos.ioc
firmware/rtos/gcc/: STM32F411CEUx_FLASH.ld  startup_stm32f411xe.s  stm32f411ce_flash.lds
firmware/rtos/inc/: FreeRTOSConfig.h  main.h  mxconstants.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/rtos/src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c  zlcr_beta_bsp.c
firmware/tools/: genhdr.py
pyLCR/: analyzer.py  app.py  scan.py
software/csharp/ZLCR/: packages.config
software/python/: analyzer.py
toolchain/: BUILDCONFIG.gn
toolchain/gcc/: BUILD.gn
