config("stm32f411xe") {
  cflags = [
    "-mthumb",
    "-mcpu=cortex-m4",
  ]
  defines = [
    "STM32F411xE",
    "USE_HAL_DRIVER",
  ]
  include_dirs = [
    "//firmware/rtos/inc",
    "stm32f4/Inc",
    "cmsis_device_f4/Include",
  ]
  cflags += [
    "-g",
    "-O3",
    "-Wall",
  ]
}

config("stm32f4xx_hard_fpu") {
  defines = [
    "ARM_MATH_CM4",
    "__FPU_PRESENT=1U",
  ]
  cflags = [
    "-mfloat-abi=hard",
    "-mfpu=fpv4-sp-d16",
    "-u_printf_float",
    "-u_scanf_float",
  ]
}

config("cmsis") {
  include_dirs = [
    "cmsis/CMSIS/Core/Include",
    "cmsis/CMSIS/DSP/Include",
    "cmsis/CMSIS/Driver/Include",
    "cmsis/CMSIS/NN/Include",
  ]
}

config("cmsis_os") {
  include_dirs = [
    "//firmware/rtos/inc",
    "freertos/FreeRTOS/Source/include",
    "freertos/FreeRTOS/Source/portable/GCC/ARM_CM4F",
    "freertos/FreeRTOS-Plus/Source/FreeRTOS-Plus-CLI",
  ]
}

static_library("cmsis_dsp") {
  configs = [
    ":stm32f411xe",
    ":stm32f4xx_hard_fpu",
    ":cmsis",
  ]
  sources = [
    "cmsis/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_f32.c",
    "cmsis/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_f32.c",
    "cmsis/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_f32.c",
    "cmsis/CMSIS/DSP/Source/FilteringFunctions/arm_fir_f32.c",
    "cmsis/CMSIS/DSP/Source/FilteringFunctions/arm_fir_init_f32.c",
    "cmsis/CMSIS/DSP/Source/SupportFunctions/arm_copy_f32.c",
  ]
}

static_library("stm32f4xx_hal") {
  public_configs = [
    ":cmsis",
    ":stm32f411xe",
    ":stm32f4xx_hard_fpu",
  ]
  sources = [
    "stm32f4/Src/stm32f4xx_hal.c",
    "stm32f4/Src/stm32f4xx_hal_cortex.c",
    "stm32f4/Src/stm32f4xx_hal_dma.c",
    "stm32f4/Src/stm32f4xx_hal_dma_ex.c",
    "stm32f4/Src/stm32f4xx_hal_flash.c",
    "stm32f4/Src/stm32f4xx_hal_flash_ex.c",
    "stm32f4/Src/stm32f4xx_hal_flash_ramfunc.c",
    "stm32f4/Src/stm32f4xx_hal_gpio.c",
    "stm32f4/Src/stm32f4xx_hal_i2c.c",
    "stm32f4/Src/stm32f4xx_hal_i2c_ex.c",
    "stm32f4/Src/stm32f4xx_hal_i2s.c",
    "stm32f4/Src/stm32f4xx_hal_i2s_ex.c",
    "stm32f4/Src/stm32f4xx_hal_pwr.c",
    "stm32f4/Src/stm32f4xx_hal_pwr_ex.c",
    "stm32f4/Src/stm32f4xx_hal_rcc.c",
    "stm32f4/Src/stm32f4xx_hal_rcc_ex.c",
    "stm32f4/Src/stm32f4xx_hal_spi.c",
    "stm32f4/Src/stm32f4xx_hal_tim.c",
    "stm32f4/Src/stm32f4xx_hal_tim_ex.c",
    "stm32f4/Src/stm32f4xx_hal_uart.c",
  ]
}

static_library("freertos") {
  public_configs = [ ":cmsis_os" ]
  configs = [
    ":cmsis",
    ":stm32f411xe",
    ":stm32f4xx_hard_fpu",
  ]
  include_dirs = [
    "freertos/FreeRTOS/Source/include",
    "freertos/FreeRTOS/Source/portable/GCC/ARM_CM4F",
  ]
  sources = [
    "freertos/FreeRTOS/Source/croutine.c",
    "freertos/FreeRTOS/Source/event_groups.c",
    "freertos/FreeRTOS/Source/list.c",
    "freertos/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c",
    "freertos/FreeRTOS/Source/portable/MemMang/heap_4.c",
    "freertos/FreeRTOS/Source/queue.c",
    "freertos/FreeRTOS/Source/tasks.c",
    "freertos/FreeRTOS/Source/timers.c",
  ]
}

static_library("freertos_plus") {
  configs = [
    ":cmsis",
    ":stm32f411xe",
    ":stm32f4xx_hard_fpu",
  ]
  sources = [ "freertos/FreeRTOS-Plus/Source/FreeRTOS-Plus-CLI/FreeRTOS_CLI.c" ]
  public_deps = [ ":freertos" ]
}
